added CSS and img

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add to Card</title>
+    <title>Add to Cart</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <input type="text" id="input-field" placeholder="Bread" />
-    <button id="add-button">Add to card</button>
-
+    <div class="container">
+      <img src="assets/cat.png" />
+      <input type="text" id="input-field" placeholder="Bread" />
+      <button id="add-button">Add to cart</button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
