--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <input type="text" id="input-field" placeholder="Bread" />
       <button id="add-button">Add to cart</button>
       <ul id="shopping-list">
-        
-        
+        <li>Oranges</li>
+        <li>Hot dogs</li>
       </ul>
     </div>
-    <script src="functions.js" type="module"></script>
+   
     <script src="index.js" type="module"></script>
   </body>
 </html>
